# ZugzwangCore_PY

./: main.py  pyproject.toml  requirements.txt
CORE/: __init__.py  enums.py  functions.py
CORE/boards/: __init__.py  board_test.txt
CORE/cardsets/: __init__.py  cards_1v1_np.py
CORE/classes/: Action.py  Ai.py  Board.py  Card.py  CardData.py  Case.py  GameState.py  Move.py  Pawn.py  Player.py  __init__.py
CORE/rules/: __init__.py  rules_1v1_3p.py
